--- a/README.adoc
+++ b/README.adoc
@@ -10,7 +10,7 @@
 :page-duration: 20 minutes
 :page-releasedate: 2024-10-31
 :page-description: Learn how to run tasks parallelly or asynchronously in Jakarta EE application by using JakartaConcurrency APIs.
-:page-tags: ['jakartaee']
+:page-tags: ['jakarta-ee']
 :page-permalink: /guides/{projectid}
 :imagesdir: /img/guide/{projectid}
 :page-related-guides: ['reactive-rest-client', 'microprofile-rest-client-async']
@@ -27,14 +27,18 @@ Learn how to run tasks parallelly or asynchronously in Jakarta EE application by
 
 == What you'll learn
 
-Introduction
-- explain Jakarta Concurrency APIs
-- describe the application
+Jakarta Concurrency is a Java API specification of Jakarta EE that provides a framework for developing concurrent and asynchronous Java cloud-native applications. The Jakarta Concurrency APIs provide concurrency utilities to make developers easier writing thread-safe and scalable applications to execute tasks parallelly or asynchronously and coordinate the completion of multiple asynchronous tasks in a more efficient manner. To learn more about Jakarta Concurrency, see the https://jakarta.ee/specifications/concurrency[Jakarta Concurrency specification^].
 
-Diagarm
+
+The application in this guide consists of two microservices, `system` and `inventory`. The `system` microservice provides GET REST APIs to retreive the Java system properties, heap size, memory usage, and system load. The `inventory` microservice provides different REST APIs to register systems, update their memory usage and system load, and query their information from the inventory. Also, the `inventory` microservice is scheduled for every 60 seconds to call the `system` microservice to update the memory usage and system load of the systems in the inventory.
+
+{empty} +
 
 image::architecture.png[Application architecture where inventory service uses the Jakarta Concurrency APIs to call the system service.,align="center"]
 
+{empty} +
+
+You'll learn how to run tasks in parallel by implementing the POST `/api/inventory/system/{hostname}` endpoint that registers a system to the inventory, create asynchronous task by the PUT `/api/inventory/systems/memoryUsed` endpoint that update the memory usage of the systems in the inventory, and synchronize asynchronous tasks by the PUT `/api/inventory/systems/systemLoad` endpoint that update the system load of the systems. Then, you'll learn how to schedule a task to update the memory usage and system load of the systems for every 60 seconds.
 
 // =================================================================================================
 // Getting started
@@ -44,24 +48,97 @@ include::{common-includes}/gitclone.adoc[]
 
 === Try what you'll build
 
-Polish the following instruction.
+The `finish` directory in the root of this guide contains the finished application. Give it a try before you proceed.
 
-Navigate to the finish directory.
-```
-cd finish
-```
+To try out the application, navigate to the `finish\system` directory and run the following command to deploy the `system` service to Open Liberty:
 
-Start `inventory` service in dev mode:
-```
-mvn -pl inventory liberty:run
-```
+ifndef::cloud-hosted[]
+[role="command"]
+----
+mvn liberty:run
+----
+endif::[]
 
-Start `system` service in dev mode:
+ifdef::cloud-hosted[]
+```bash
+cd /home/project/guide-concurrency-intro/finish/system
+mvn liberty:run
 ```
-mvn -pl system liberty:run
-```
+endif::[]
 
-Visit http://localhost:9080/openapi/ui for inventory REST APIs that perform asynchronous or parallel tasks
+Open another command-line session. Navigate to the `finish\inventory` directory and run the following command to deploy the `inventory`service to Open Liberty:
+
+ifndef::cloud-hosted[]
+[role="command"]
+----
+mvn liberty:run
+----
+endif::[]
+
+ifdef::cloud-hosted[]
+```bash
+cd /home/project/guide-concurrency-intro/finish/inventory
+mvn liberty:run
+```
+endif::[]
+
+After you see the following message in both command-line sessions, both your services are ready.
+
+[role="no_copy"]
+----
+The defaultServer server is ready to run a smarter planet.
+----
+
+ifndef::cloud-hosted[]
+Visit http://localhost:9081/openapi/ui URL to try out the REST endpoints of the `inventory` microservice.
+
+First, make a POST request to the `/api/inventory/system/{hostname}` endpoint. To make this request, expand the POST endpoint on the UI, click the `Try it out` button, provide  `localhost` for the `hostname`` parameter, then click the `Execute` button. The POST request registers the `localhost` system to the inventory.
+
+Visit the http://localhost:9081/api/inventory/systems URL to see the inventory. You will see an output similar to the following:
+
+[role="no_copy"]
+----
+[
+  {
+    "heapSize": 8589934592,
+    "hostname": "localhost",
+    "javaVersion": "17.0.12",
+    "memoryUsage": 0,
+    "osName": "Mac OS X",
+    "systemLoad": 0
+  }
+]
+----
+
+Repeat the above POST endpoint with `127.0.0.1` and your local system hostname.
+
+Then, make a PUT request to the `/api/inventory/systems/memoryUsed` endpoint with `5` for the `after` parameter and a PUT request to the `/api/inventory/systems/systemLoad` endpoint with `5` for the `after` parameter. After 5 seconds, visit the http://localhost:9081/api/inventory/systems URL again to see that the `memoryUsage` and `systemLoad` values are updated to be non zero. If you interest, try out the other endpoints. 
+endif::[]
+
+
+ifdef::cloud-hosted[]
+Register some systems by 
+
+
+endif::[]
+
+After you are finished checking out the application, stop the Open Liberty instance by pressing `CTRL+C` in the command-line session where you ran the `inventory` services. Alternatively, you can run the `liberty:stop` goal from the `finish\inventory` directory in another command-line session:
+
+ifndef::cloud-hosted[]
+[role="command"]
+----
+mvn liberty:stop
+----
+endif::[]
+
+ifdef::cloud-hosted[]
+```bash
+cd /home/project/guide-concurrency-intro/finish/inventory
+mvn liberty:stop
+```
+endif::[]
+
+Let the `system` service run and start to imlplement the `inventory` service in the following sections.
 
 == Running tasks in parallel
 Retrieve the system properties in parallel
